Repair broken css

--- a/app/assets/stylesheets/antakyahome_mobile.css
+++ b/app/assets/stylesheets/antakyahome_mobile.css
@@ -10,7 +10,6 @@
 
 /*-------------------------------------------------------------------------------------------------------------------------------------------*/
   /*Fejléc*/
-  header {background-image: }
   h2 {
     font-size: 10vw;
     text-align: center;
